[package]
name = "relm-test"
version = "0.5.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.relm4]
version = "0.6.2"
features = [ "libadwaita" ]

[dependencies.relm4-icons]
version = "0.6.0"
features = [ "papyrus" ]
