[package]
name = "relm-test"
version = "0.5.19"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows-keep-console-window = []

[dependencies.relm4]
version = "0.9.0"
features = ["libadwaita"]

[dependencies.relm4-icons]
version = "0.9.0"

[dev-dependencies]
log = "0.4.22"
pretty_env_logger = "0.5.0"
test-by-a11y = "0.2.0"
